--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,53 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Julee&family=Lato:wght@700&family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Zeyada&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hind&display=swap');
 
 
-/* font-family: 'Lato', sans-serif; */
+/* font-family: 'Roboto Slab', serif; */
+/* font-family: 'Zeyada', cursive; */
+/* font-family: 'Poppins', sans-serif; */
+/* font-family: 'Hind', sans-serif; */
+
+
+:root{
+    --color:rgb(0, 166, 255);
+    --primary-color-light:rgb(0,166,255,.8)
+}
+
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box !important;
 }
+
+
+body{
+    scroll-behavior: smooth;
+}
+
+
+
+
+h2{
+    font-size: 30px;    
+    word-spacing: 1rem;
+    letter-spacing: .5px;
+    font-family: 'Roboto Slab', serif;
+    font-weight: bold;
+    text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
+}
+
+
+
+
+
+
+
+
+
+/* **************** specific CSS start from here ************** */
 
 .navbar{
     background: transparent !important;
@@ -20,15 +61,20 @@
     }
 }
 
+.navbar-brand   {
+    color: rgb(145, 140, 140) !important;
+    font-size: 1.8rem;
+}
 .nav-link{
     font-weight: 600;
+    color: rgb(170, 170, 170);
 }
 
 .header{
     height: 100vh;
     width: 100vw;
     background-color: black;
-    z-index: 10000000;
+    /* z-index: 10000000; */
     background:linear-gradient(rgba(0,0,0,.4) 50%,rgba(0,0,0,.4) 50%),
                 url('../img/blue-bg.jpg');
     background-repeat: no-repeat;
@@ -38,18 +84,25 @@
 }
 
 .container-below-navbar h2{
-    font-size: 3rem;
+    font-size: 3em;
     font-weight: bolder;
     letter-spacing: 2px;    
     font-family: 'Julee', cursive;
     text-shadow: 0px 1px 2px black;
-
+    
     /* css properties for moving animation */
     width: 0ch;
     white-space: nowrap;
     overflow: hidden;
-    
+    margin: 0;
     animation: moving-text-heading 2s  ease-in forwards;
+}
+
+@media screen and ( 0 <width <= 768px) {
+    .container-below-navbar h2{
+        font-size: 2em;
+        margin: 0;
+    }
 }
 
 @keyframes moving-text-heading {
@@ -57,7 +110,7 @@
         width: 0ch;
     }
     100%{
-        width: 25ch;
+        width: 29ch;
     }
 }
 
@@ -94,13 +147,274 @@
 /* ******************* header section is completed****************** */
 
 
+/* ******************* about me section is start ************** */
+
+
+.about-me{
+    width: 100vw;
+    min-height: 80vh;
+    background-color: #e7ecee;
+    padding: 20px 0px;
+}
+
+.about-me img{
+    aspect-ratio: 3/4;
+    /* width: 100%;
+    height: 100%; */
+}
+
+
+
+/* ******************* about me section is end ************** */
+
 /* ******************** skills section is start ****************** */
 .skills{
     width: 100vw;
-    height: 100vh;
+    min-height: 80vh;
     padding: 50px 0;
-    background-color: rgb(227, 224, 224);
+    /* background-color: #e7ecee; */
+}
+
+.skills p{
+    font-weight: 500;
+    font-family: 'Poppins', sans-serif;
 }
 
 
 /* ******************** skills section is end ****************** */
+
+
+
+
+/* @@@@@@@@@@@@#################  SERVICE page component style start #################$$$$$@@@@@@@@@@ */
+
+/* ******************** cardDiv  section for service page is start ****************** */
+
+.cardDiv .card{
+    transition: 500ms cubic-bezier(0.42, 0, 0.55, 1.76);
+    border: none !important;
+    border-radius: 10px !important;
+    box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.3) !important;
+}
+
+
+.cardDiv .card:hover{
+    transform: translateY(-10px);
+    box-shadow: 1px 0px 20px 2px rgba(0, 0, 0, 0.3) !important;
+}
+
+
+
+.card-title{
+    letter-spacing: 0.1px;
+    word-spacing: 2px;
+}
+
+.fa-solid{
+    color: var(--color);
+}
+
+/* ******************** cardDiv  section for service page is end ****************** */
+
+
+
+
+/* ******************** service  section for service page is start ****************** */
+.service{
+    width: 100vw;
+    min-height: 100vh;
+    /* background: linear-gradient(160deg , #16c9f6 55% , #fff 0%); */
+    background:linear-gradient(160deg, var(--color) 50% ,  #fff 0%)
+}
+
+.service .card{
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3) !important;
+    transition: 500ms cubic-bezier(0.42, 0, 0.55, 1.76);
+}
+
+
+.service h5{
+    font-size: 22px;
+}
+
+.service li{
+    padding: 2px 0px;
+    list-style: none;
+    font-family: 'Lato', sans-serif;
+    transition-duration: 100ms;
+}
+
+.service li:hover{
+    transform: scale(1.05);
+}
+
+
+.service .price{
+    font-size: 30px;
+}
+
+
+.service a{
+    outline: none;
+    font-family: 'Lato', sans-serif;
+    border: 2px solid rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    font-size: 14px;
+    padding: 10px 15px;
+    color: var(--color);
+}
+
+.second-card{
+    transform: translateY(-15px);
+}
+
+
+.service .card:hover{
+    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.3) !important;
+    transform: translateY(-20px);
+}
+
+.service .card:hover  h5 , .service .card:hover  .price{
+    color: var(--color);
+}
+
+.service .card:hover  a{
+    color: white;
+    background-color: var(--color);
+    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.7);
+}
+
+/* ******************** service  section for service page is end ****************** */
+
+/* *********************** .testimonials section for service page is start ***************** */
+.testimonials {
+    min-height: 100vh ;      
+    padding: 40px 0px;
+    background: linear-gradient(120deg , var(--color)  , white, var(--color) );
+
+}
+
+.testimonials-cards-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    
+}
+.testimonials-cards{
+    flex-basis: 45%;
+    flex-grow: 1;
+    border-radius: 10px;
+    background-color: #e7ecee;
+    padding: 20px 20px;
+    margin:10px 20px;
+    box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.3);
+    font-family: 'Hind', sans-serif;
+}
+
+@media only screen and (max-width:768px)  {
+    .testimonials-cards-container{
+        width: 100%;
+        flex-direction: column;
+    }
+    
+}
+
+
+/* *********************** .testimonials section for service page is end ***************** */
+
+
+/* @@@@@@@@@@@@#################  SERVICE page component style end #################$$$$$@@@@@@@@@@ */
+
+
+
+
+/* ************************footer section is start ******************************** */
+
+.footer{
+    width: 100vw;
+    min-height: 100vh;
+    padding: 40px 0;
+    background: linear-gradient(334deg , var(--color) 50% , white 0% );
+}
+
+
+
+.userDetail input , .userDetail textarea{
+    padding: 10px;
+    border: 2px solid rgba(0, 0, 0, 0.3);
+    border-radius: 5px;
+    outline: none;
+}
+
+
+.userDetail input:focus ,.userDetail textarea:focus  {
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.3) !important;
+    background-color: #fff;
+}
+
+.userDetail:hover .btn{
+    box-shadow: 0px 0px 5px black;
+}
+
+
+
+.btn{
+    display: inline-block;
+    margin: auto;
+    padding: 10px 20px;
+    border: 2px solid rgba(0, 0, 0, 0.3);
+    border-radius: 21px;
+}
+
+.btn:hover , .btn:focus{
+    background-color: var(--color);
+    color: white;
+    box-shadow: 0px 0px 10px black;
+}
+
+
+.footer-icons-header,.footer-link-header{
+    font-family: 'Hind', sans-serif;
+    font-weight: bold;
+}
+
+.footer-link{
+    text-decoration: none;
+    display: block;
+    color: rgb(0,0,0,.8);
+    margin: 5px 0;
+    font-family: 'Hind', sans-serif;
+}
+
+.footer-link:hover{
+    text-decoration: underline;
+}
+
+.footer-link:active{
+    color: rgb(71, 71, 71);
+}
+
+footer small{
+    font-weight: bold;
+}
+
+footer small span{
+    font-size: 18px;
+}
+
+footer .icons{
+    font-size: 22px;
+    margin: 1px 0;
+    color: black;
+    transition: .3s;
+}
+/* 
+footer .icons:not(:hover){
+    opacity: .5;
+} */
+
+footer .icons:hover{
+    transform: scale(1.3) translate(2px);
+
+}
+/* ************************footer section is end ******************************** */
